@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.86 2005/03/22 08:17:26 abs Exp $
+# $NetBSD: Makefile,v 1.87 2005/04/08 07:24:25 abs Exp $
 #
 
-DISTNAME=	cpuflags-0.83
+DISTNAME=	cpuflags-0.84
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
